# aws2openstack

./: .env.test.template  .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 24d8e3b192ac_initial_schema.py
docker/: docker-compose.yml
docs/: SETUP.md  testing.md
docs/plans/: 2026-01-08-glue-catalog-assessment-design.md  2026-01-09-persistence-mcp-dashboard-design.md  2026-01-13-dev-test-environment-design.md
scripts/: generate_test_data.py  run_dashboard.sh  upload_test_data.sh
src/aws2openstack/: __init__.py  cli.py
src/aws2openstack/assessments/: __init__.py  glue_catalog.py
src/aws2openstack/dashboard/: README.md  __init__.py  app.py
src/aws2openstack/mcp_server/: __init__.py  server.py  tools.py
src/aws2openstack/models/: __init__.py  catalog.py
src/aws2openstack/persistence/: __init__.py  base.py  models.py  repository.py
src/aws2openstack/reporters/: json_reporter.py  markdown_reporter.py
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/test-env/: glue.tf  main.tf  outputs.tf  s3.tf  variables.tf
tests/: __init__.py  test_cli.py  test_glue_catalog.py  test_integration.py  test_mcp_server.py  test_models.py  test_persistence_models.py  test_reporters.py  test_repository.py
